# wac_example

./: Cargo.toml  README.md  build_run.fish  cli.fish  cli.wac  example.wac  http.fish  http.wac
cli/: Cargo.toml
cli/src/: bindings.rs  main.rs
cli/wit/: world.wit
greeter/: Cargo.toml
greeter/src/: bindings.rs  lib.rs
greeter/wit/: world.wit
http/: Cargo.toml
http/src/: lib.rs
http/wit/: deps  world.wit
name/: Cargo.toml
name/src/: bindings.rs  lib.rs
name/wit/: world.wit
