[package]
name = "name"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt.workspace = true

[lib]
crate-type = ["cdylib"]


[package.metadata.component]
package = "example:name"

[package.metadata.component.target.dependencies]
"wasi:cli" = { path = "wit/deps/cli" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"wasi:filesystem" = { path = "wit/deps/filesystem" }
"wasi:http" = { path = "wit/deps/http" }
"wasi:io" = { path = "wit/deps/io" }
"wasi:random" = { path = "wit/deps/random" }
"wasi:sockets" = { path = "wit/deps/sockets" }
